--- a/ld41.csproj
+++ b/ld41.csproj
@@ -302,14 +302,16 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\CardData.cs" />
-    <Compile Include="Assets\Scripts\Card.cs" />
+    <Compile Include="Assets\Scripts\CardModel.cs" />
+    <Compile Include="Assets\Scripts\CardView.cs" />
     <Compile Include="Assets\Scripts\Controller\Drawing.cs" />
     <Compile Include="Assets\Scripts\Controller\FpsController.cs" />
     <Compile Include="Assets\Scripts\Game.cs" />
     <Compile Include="Assets\Scripts\Controller\MouseLook.cs" />
+    <Compile Include="Assets\Scripts\Stack\Deck.cs" />
     <Compile Include="Assets\Scripts\Stack\Stack.cs" />
     <Compile Include="Assets\Scripts\Stack\Table.cs" />
+    <Compile Include="Assets\Scripts\Stack\Wastepile.cs" />
     <Compile Include="Assets\Scripts\Util.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
