--- a/ld41.csproj
+++ b/ld41.csproj
@@ -309,6 +309,7 @@
     <Compile Include="Assets\Scripts\Controller\MouseLook.cs" />
     <Compile Include="Assets\Scripts\Interaction.cs" />
     <Compile Include="Assets\Scripts\Stack\Deck.cs" />
+    <Compile Include="Assets\Scripts\Stack\Foundation.cs" />
     <Compile Include="Assets\Scripts\Stack\Stack.cs" />
     <Compile Include="Assets\Scripts\Stack\Table.cs" />
     <Compile Include="Assets\Scripts\Stack\Wastepile.cs" />
