There are no commit messages in game jams;

--- a/ld41.Editor.Plugins.csproj
+++ b/ld41.Editor.Plugins.csproj
@@ -308,6 +308,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Resources\Materials\GradientSkybox.shader" />
+    <None Include="Assets\Resources\Materials\GroundShader.shader" />
     <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
     <None Include="Assets\Standard Assets\Prototyping\Shaders\WorldCoordDiffuse.shader" />
     <None Include="Assets\TextMesh Pro\Examples &amp; Extras\Fonts\Anton OFL.txt" />
